[gd_scene load_steps=15 format=2]

[ext_resource path="res://GameUI.gd" type="Script" id=1]
[ext_resource path="res://src/chars/Molotovers_tower.png" type="Texture" id=2]
[ext_resource path="res://src/chars/SlingShotters_tower.png" type="Texture" id=3]
[ext_resource path="res://src/chars/thrower_tower.png" type="Texture" id=4]
[ext_resource path="res://src/UI.png" type="Texture" id=5]
[ext_resource path="res://src/health.png" type="Texture" id=6]
[ext_resource path="res://src/SigmarOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/sound/slow_off.wav" type="AudioStream" id=8]
[ext_resource path="res://src/sound/slow_on.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 0.478431 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37, 27 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 0.478431 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 0.478431 )
use_filter = true
font_data = ExtResource( 7 )

[node name="GameUI" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Sprite" parent="."]
position = Vector2( 428, 238.5 )
scale = Vector2( 0.445833, 0.447222 )
texture = ExtResource( 5 )

[node name="progress" type="TextureProgress" parent="."]
margin_left = 264.0
margin_top = 8.0
margin_right = 584.0
margin_bottom = 24.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
tint_under = Color( 0.152941, 0.145098, 0.145098, 1 )
tint_progress = Color( 0.0823529, 0.407843, 0.431373, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="progress"]

[node name="t1_btn" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 760, 112 )
scale = Vector2( 1.07865, 0.898877 )
normal = ExtResource( 4 )

[node name="t2_btn" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 768, 240 )
scale = Vector2( 1.14286, 0.782609 )
normal = ExtResource( 3 )

[node name="t3_btn" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 760, 360 )
scale = Vector2( 1.02128, 0.765957 )
normal = ExtResource( 2 )

[node name="heart" type="Label" parent="."]
margin_left = 56.0
margin_top = 3.0
margin_right = 208.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold" type="Label" parent="."]
margin_left = 56.0
margin_top = 56.0
margin_right = 200.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wave" type="Label" parent="."]
margin_left = 284.0
margin_top = 16.0
margin_right = 564.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "Preparation"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ff" type="TouchScreenButton" parent="."]
position = Vector2( 688, 8 )
shape = SubResource( 2 )

[node name="slow_on" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Sound"

[node name="slow_off" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sound"

[node name="x2" type="Label" parent="."]
visible = false
margin_left = 632.0
margin_top = 16.0
margin_right = 684.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "2X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_pause" type="TouchScreenButton" parent="."]
position = Vector2( 777, 7 )
shape = SubResource( 2 )

[node name="pause_menu" type="Node2D" parent="."]
pause_mode = 2
visible = false
z_index = 2000

[node name="ColorRect" type="ColorRect" parent="pause_menu"]
margin_left = 272.0
margin_top = 72.0
margin_right = 592.0
margin_bottom = 448.0
color = Color( 0, 0, 0, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deets" type="Label" parent="pause_menu"]
margin_left = 290.0
margin_top = 72.0
margin_right = 570.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.921569, 1, 0, 1 )
text = "PAUSED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="pause_menu"]
modulate = Color( 1, 0.168627, 0.168627, 1 )
margin_left = 296.0
margin_top = 320.0
margin_right = 576.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.811765, 0.117647, 1 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="pause_menu"]
modulate = Color( 1, 0.168627, 0.168627, 1 )
margin_left = 296.0
margin_top = 376.0
margin_right = 576.0
margin_bottom = 424.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.811765, 0.117647, 1 )
text = "SURRENDER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="Label" parent="pause_menu"]
margin_left = 305.0
margin_top = 131.0
margin_right = 482.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 5 )
text = "fullscreen mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc2" type="Label" parent="pause_menu"]
margin_left = 352.0
margin_top = 184.0
margin_right = 529.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 5 )
text = "MUSIC VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc3" type="Label" parent="pause_menu"]
margin_left = 336.0
margin_top = 248.0
margin_right = 538.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 5 )
text = "SOUND FX VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="pause_menu"]
margin_left = 488.0
margin_top = 128.0
margin_right = 564.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_slider" type="HSlider" parent="pause_menu"]
margin_left = 352.0
margin_top = 213.0
margin_right = 520.0
margin_bottom = 229.0
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fx_slider" type="HSlider" parent="pause_menu"]
margin_left = 352.0
margin_top = 275.0
margin_right = 520.0
margin_bottom = 291.0
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="progress/timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="t1_btn" to="." method="_on_t1_btn_pressed"]
[connection signal="released" from="t1_btn" to="." method="_on_t1_btn_released"]
[connection signal="pressed" from="t2_btn" to="." method="_on_t2_btn_pressed"]
[connection signal="released" from="t2_btn" to="." method="_on_t2_btn_released"]
[connection signal="pressed" from="t3_btn" to="." method="_on_t3_btn_pressed"]
[connection signal="released" from="t3_btn" to="." method="_on_t3_btn_released"]
[connection signal="released" from="ff" to="." method="_on_ff_released"]
[connection signal="pressed" from="btn_pause" to="." method="_on_btn_pause_pressed"]
[connection signal="pressed" from="pause_menu/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pause_menu/quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="pause_menu/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="pause_menu/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="pause_menu/fx_slider" to="." method="_on_fx_slider_value_changed"]
